--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,79 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# --- Node.js / Frontend ---
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
+.npm
+.yarn-integrity
+dist/
+build/
+.next/
+.nuxt/
+.output/
+*.tsbuildinfo
+
+# --- Environment variables ---
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# --- IDEs e editores ---
+.idea/
+*.iml
+*.ipr
+*.iws
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.swp
+*.swo
+*~
+
+# --- Sistema operacional ---
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# --- Maven ---
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+
+# --- Testes e cobertura ---
+coverage/
+.nyc_output/
+*.lcov
+jacoco/
+*.exec
+
+# --- Cache e temporários ---
+.cache/
+*.tmp
+*.temp
+.temp/
+tmp/
+temp/
+
+# --- Outros ---
+*.bak
+*.backup
+*.orig
+*.rej
